fix: tab completion in some cases